<resources>
    <string-array name="languagues">
        <item>Duits</item>
        <item>Engels</item>
        <item>Frans</item>
        <item>Nederlands</item>
        <item>Latijn</item>
        <item>Grieks</item>
    </string-array>

    <string name="app_name">Rijtjes</string>
    <string name="bekijken_page_name">Rijtjes</string>
    <string name="title_activity_hetfuckingmenu">HETFUCKINGMENU</string>
    <string name="create_list_page_name">Lijst maken</string>
    <string name="display_list_page_name">Lijsten</string>
    <string name="edit_word_list_page_name">Aanpassen</string>
    <string name="question_page_name">Overhoren</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="retest">Maak opnieuw</string>
    <string name="filler">filler</string>
    <string name="action_settings">Instellingen</string>
    <string name="Essay">Toetsen</string>
    <string name="Extras">Meer</string>
    <string name="Input">Invoeren</string>
    <string name="Check">Bekijken</string>
    <string name="Practice">Oefenen</string>
    <string name="About">Over</string>
    <string name="Share">Deel</string>
    <string name="title_activity_menutest2">Menutest2</string>
    <string name="title_activity_nav_menu">NavMenu :D</string>
    <string name="Test_options">Overhoor opties</string>
    <string name="Pay_attention_to_whitespaces">Let op spaties</string>
    <string name="Pay_attention_to_capitle_letters">Let op hoofdletters</string>
    <string name="Test">Overhoor</string>
    <string name="Check_answer">Check antwoord</string>
    <string name="Your_answer">Jouw antwoord</string>
    <string name="All_lists">Alle Lijsten</string>
    <string name="Home">Home</string>
    <string name="Create_list">Maak lijst</string>
    <string name="Name_list">Naam lijst</string>
    <string name="Change">Aanpassen</string>
    <string name="Delete">Verwijderen</string>
    <string name="Add_row">Voeg rij toe</string>
    <string name="Delete_row">Verwijder rij</string>
    <string name="Save">Opslaan</string>
    <string name="Was_right">Was wel goed</string>
    <string name="Test_reversed">Omgekeerd</string>
    <string name="Test_as_made">Zoals ingevoerd</string>
    <string name="Test_direction">Overhoorrichting:</string>


    <string name="About_us_text">Deze app hebben wij gemaakt voor ons profielwerkstuk. Ons profielwerkstuk is nu klaar, maar mogelijk voegen we nog meer functies toe. Het is de eerste app die we hebben gemaakt, dus er zouden nog wat foutjes in kunnen zitten. Als je er eentje vindt, laat het ons dan weten door te mailen naar \'rijtjesapp\@zegmaarbas.nl\'. Bedankt voor het gebruik van onze app!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="versionName">"Versie: "</string>
    <string name="notGood">HIER GAAT WAT FOUT!</string>
    <string name="versionCode">"Versienummer: "</string>

</resources>