<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_enter"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Input" />
        <item
            android:id="@+id/nav_check"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Check" />
        <!-- <item
            android:id="@+id/nav_practise"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Practice" />
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Essay" /> -->
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>

    <item android:title="@string/Extras">
        <menu>
            <!-- <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Share" /> -->
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/About" />
        </menu>
    </item>

</menu>