<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.absontwikkeling.rijtjes.settings">

    <TextView
        android:id="@+id/Overhoor_opties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginLeft="@dimen/standard_margin"
        android:text="@string/Test_options"
        android:textColor="@color/colorLightBlack"
        android:textSize="@dimen/bigtextsize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <CheckBox
        android:id="@+id/whitespaceCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginLeft="@dimen/standard_margin"
        android:checked="true"
        android:text="@string/Pay_attention_to_whitespaces"
        android:textColor="@color/colorLightBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Overhoor_opties" />

    <CheckBox
        android:id="@+id/capitalsCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginLeft="@dimen/standard_margin"
        android:checked="true"
        android:text="@string/Pay_attention_to_capitle_letters"
        android:textColor="@color/colorLightBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whitespaceCB" />

    <Button
        android:id="@+id/overhoor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:onClick="applySettings"
        android:text="@string/Test"
        android:textColor="@color/colorLightBlack"
        android:textSize="@dimen/buttonteztsize_big"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
